--- a/food/templates/food/Credentials.html
+++ b/food/templates/food/Credentials.html
@@ -54,6 +54,7 @@
                         </div>
                         <div id="adminLoginForm" style="display: none;">
                             <form action="{%url 'food:adminlogIn'%}" method="POST">
+                                {% csrf_token %}
                                 <div class="form-group">
                                     <label for="adminName">Admin name</label>
                                     <input type="name" class="form-control" name="adminName" placeholder="Enter admin name">
@@ -68,6 +69,7 @@
                         </div>
                         <div id="adminSignupForm" style="display: none;">
                             <form action="{%url 'food:adminSignUp'%}" method="POST">
+                                {% csrf_token %}
                                 <div class="form-group">
                                     <label for="newAdminName">Admin name</label>
                                     <input type="name" class="form-control" name="newAdminName" placeholder="Enter admin name">
@@ -90,7 +92,6 @@
         </div>
     </div>
 
-    <!-- Add Bootstrap JS and your custom JavaScript code here -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script>
